force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is populated automatically when creating a scenario. This field
        specifies the account associated with the scenario.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>