force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Average_Collected_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Collected_Balance__c</fullName>
    <description>This field is populated automatically via formula. This field stores the difference of the average ledger balance and the average unavailable.</description>
    <formula>LLC_BI__Average_Ledger_Balance__c - LLC_BI__Average_Unavailable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Collected Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>