force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Average_Ledger_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Ledger_Balance__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. This field represents the balance of a customer&apos;s bank account that is displayed on a bank statement</description>
    <label>Average Ledger Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>