force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Average_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Unavailable__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. This field represents that amount of unavailable funds on an account</description>
    <label>Less: Average Unavailable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>