force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Balance_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Required__c</fullName>
    <description>This field is automatically populated via a trigger. It is calculated by adding the LLC_BI__Minimum_Required_Balance__c value together for each LLC_BI__Scenario_Item__c associated with the Scenario. This field represents the minimum dollar amount that a customer must have in an account in order to receive all services on the proforma.</description>
    <label>Less Balance Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>