force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Balance_Required_To_Offset_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Required_To_Offset_Service__c</fullName>
    <description>This field is populated automatically via formula. This field stores the balance needed to pay the earnings credit allowance balance.</description>
    <formula>IF(LLC_BI__Earnings_Credit_Allowance__c &gt; 0, 1 / (LLC_BI__Earnings_Credit_Allowance__c * (DAY(DATE(YEAR(TODAY()),MONTH(TODAY())+1,1)-1)/360)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Required To Offset Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>