force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Competitor_Net_Charge__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Competitor_Net_Charge__c</fullName>
    <description>This field is populated automatically via formula. This field stores the value of a competitor&apos;s net charge.</description>
    <formula>IF((LLC_BI__Competitor_Total_Charge__c - LLC_BI__Average_Collected_Balance__c * ( LLC_BI__Competitor_Earnings_Credit_Allowance__c /365) * 30 &gt; 0),
  (LLC_BI__Competitor_Total_Charge__c - LLC_BI__Average_Collected_Balance__c * ( LLC_BI__Competitor_Earnings_Credit_Allowance__c    /365) * 30) ,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Net Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>