force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Difference_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Difference_Total__c</fullName>
    <description>This field is populated automatically via formula. This field stores the difference between the net charge difference and the total charge difference.</description>
    <formula>LLC_BI__Total_Net_Charge_Difference__c -  LLC_BI__Total_Charge_Difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>