force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Discount_Percent_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Discount_Percent_Total__c</fullName>
    <description>This field is populated automatically. This field stores the total percentage of discounts applied to the entire performa.</description>
    <formula>IF(LLC_BI__Total_Gross_Fee__c  &gt; 0, 1 - (LLC_BI__Svc_Total__c / LLC_BI__Total_Gross_Fee__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>