force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Earnings_Credit_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Earnings_Credit_Allowance_Amount__c</fullName>
    <description>This field is populated automatically via formula. It stores the calculation on the net funds available in a checking account and the credit amount can be used to offset all or a portion of monthly service charges.</description>
    <formula>IF(LLC_BI__Investable_Balance__c &lt; 0, 0, (LLC_BI__Earnings_Credit_Allowance__c / 12) * LLC_BI__Investable_Balance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earnings Credit Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>