force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Is_Final__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Final__c</fullName>
    <description>This field is populated automatically via formula. This is a formula checkbox that is checked when proforma status changes to Final.</description>
    <formula>TEXT(LLC_BI__Status__c) = &apos;Final&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Final</label>
    <type>Checkbox</type>
</CustomField>