force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Net_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Amount_Due__c</fullName>
    <description>This field is populated automatically via formula. It stores the total sum of money due for the purchase of a service.</description>
    <formula>IF(LLC_BI__Earnings_Credit_Allowance_Amount__c &gt; LLC_BI__Svc_Total__c , LLC_BI__Svc_Total__c - LLC_BI__Earnings_Credit_Allowance_Amount__c, LLC_BI__Net_Deficit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>