force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Product_Quantities__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Quantities__c</fullName>
    <description>Serialized data containing the product or product type id to the quantity of treasury services to create.</description>
    <label>Product Quantities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>