force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Reserve_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reserve_Requirement__c</fullName>
    <description>This field is populated automatically via formula. This fields stores the amount that sets the minimum fraction of customer deposits and notes that each commercial bank must hold.</description>
    <formula>(LLC_BI__Average_Collected_Balance__c * LLC_BI__Reserve_Requirement_Rate__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Requirement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>