force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Reserve_Requirement_Rate_Perc__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reserve_Requirement_Rate_Perc__c</fullName>
    <formula>LLC_BI__Reserve_Requirement_Rate__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Requirement Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>