force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Svc_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Svc_Total__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field is populated automatically via trigger. It stores the sum of the fee including discounts for all bill points. It details the total fee for all bill points.</description>
    <label>Service Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>