force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Balance_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Balance_Required__c</fullName>
    <description>This field is automatically populated via a trigger. It stores the annualized minimum required balance for all bill points in the scenario.</description>
    <label>Total Balance Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>