force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Competitor_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Competitor_Difference__c</fullName>
    <description>This field is populated automatically via a trigger. It stores the difference between your calculated fee (including discounts for all bill points) and the competitor&apos;s fees for all bill points</description>
    <label>Total Competitor Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>