force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Discount__c</fullName>
    <description>This field is optional. It is populated manually in the proforma. It contains the discount percent applied to the total scenario, which is input on the proforma.</description>
    <label>Total Discount (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>