force-app/main/default/objects/LLC_BI__Scenario__c/fields/LLC_BI__Total_Net_Charge_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Net_Charge_Difference__c</fullName>
    <description>This field is populated automatically via formula. It stores the difference between a competitor&apos;s net charge and the net amount for this proforma.</description>
    <formula>LLC_BI__Competitor_Net_Charge__c -  LLC_BI__Net_Amount_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Charge Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>